# hero_rpg

./: LICENSE  README.md
server/: Cargo.toml  rocket.toml
server/src/: battle.rs  common_actions.rs  config.rs  enemy.rs  game_screen.rs  game_state.rs  gui_item.rs  http_method.rs  main.rs  player_state.rs  quest.rs  quests_endpoint.rs  root_endpoint.rs  router.rs  thread_safe.rs
server/src/endpoints/: authentication_endpoint.rs  mod.rs  quests_endpoint.rs  root_endpoint.rs  shared.rs  village_endpoint.rs  wilderness_endpoint.rs
server/src/endpoints/commands/: accept_quest.rs  get_login_screen.rs  get_quests.rs  get_quests_screen.rs  get_village.rs  mod.rs
ts-client/: .gitignore  config.js  gulpfile.js  index.html  package.json  tsconfig.json
ts-client/src/: gui-lib.ts  http-client.ts  jsx.d.ts  main.tsx
