[package]
name = "hero_rpg"
version = "0.1.0"
authors = ["Tim Bergqvist <boggeb@gmail.com>"]

[dependencies]
rand = "0.3.16"
serde_derive = "1.0.11"
serde_json = "1.0"
serde = "1.0.11"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rocket_cors = "0.2.0"

[dependencies.rocket_contrib]
version = "0.3.2"
default-features = false
features = ["json"]